Fix {{else}}{{#if}} into {{else if}} merging

--- a/tests/glimmer/else-if.hbs
+++ b/tests/glimmer/else-if.hbs
@@ -70,9 +70,15 @@
 
 {{#if a}}
   a
+  <div>b</div>
+  c
 {{else}}
   {{#if c}}
-    c
+    a
+    b
+    <div>c</div>
   {{/if}}
-  e
+  <div>a</div>
+  b
+  c
 {{/if}}
