Improve spacing around curlies

--- a/tests/glimmer/curly.hbs
+++ b/tests/glimmer/curly.hbs
@@ -1,2 +1,15 @@
 <p>Your username is @{{name}}</p>
 <p>Hi {{firstName}} {{lastName}}</p>
+
+{{alex}} Ben {{sophie}}
+{{alex}}Ben{{sophie}}
+
+<p>{{alex}} Ben {{sophie}}</p>
+<p>{{alex}}Ben{{sophie}}</p>
+
+<p>
+  {{alex}} Ben {{sophie}}
+  <button>click me</button>
+</p>
+
+<p>{{alex}} Ben {{sophie}} <button>click me</button></p>
