--- a/tests/handlebars-whitespace/display-inline-block.hbs
+++ b/tests/handlebars-whitespace/display-inline-block.hbs
@@ -9,4 +9,4 @@ Click here! Click here! Click here! Click here! Click here! Click here!
 <button>Click here! Click here! Click here! Click here! Click here! Click here!</button>
 <button>Click here! Click here! Click here! Click here! Click here! Click here!</button>
 </div>
-<video src="brave.webm"><track kind=subtitles src=brave.en.vtt srclang=en label="English"><track kind=subtitles src=brave.en.vtt srclang=en label="English"></video>
+<video src="brave.webm"></video>
