--- a/tests/handlebars-comment/comments.hbs
+++ b/tests/handlebars-comment/comments.hbs
@@ -1,3 +1,15 @@
+<div>
+  {{! Foo }}
+  {{#if @foo}}
+    Foo
+  {{/if}}
+
+  {{! Bar }}
+  {{#if @bar}}
+    Bar
+  {{/if}}
+</div>
+
 <div class="entry">
   {{! This comment will not be in the output }}
   {{!-- This comment as }} and will not be in the output --}}
