Add z-index to playground footer buttons

--- a/website/static/separate-css/playground.css
+++ b/website/static/separate-css/playground.css
@@ -157,6 +157,10 @@ header h1 {
   float: left;
 }
 
+.bottom-bar-buttons .btn {
+  z-index: 6;
+}
+
 .bottom-bar-buttons-right {
   float: right;
 }
