--- a/tests/css_quotes/quotes.css
+++ b/tests/css_quotes/quotes.css
@@ -4,7 +4,7 @@
 @charset 'UTF-8'; /* Single quotes are invalid here. Keep them since we don't know what the user is doing. */
 
 @supports (content: one "two" three 'four') {
-  a[href="foo" i],
+  a[href="foo" y],
   abbr[title^='It\'s a trap!'],
   img[src=""] {
     /* Simple strings. */
