--- a/tests/css_less/less.less
+++ b/tests/css_less/less.less
@@ -1357,7 +1357,7 @@ selector {
 .mixin (@a) when (isnumber(@a)) and (@a > 0) { /* ... */ }
 
 
-.mixin (@a) when (@a > 10), (@a < -10) { /* ... */ }
+.mixin (@a) when ((@a > 10), (@a < -10)) { /* ... */ }
 
 
 .mixin (@b) when not (@b > 0) { /* ... */ }
