--- a/tests/css_attribute/quotes.css
+++ b/tests/css_attribute/quotes.css
@@ -1,7 +1,6 @@
-a[id=test] {}
+﻿a[id=test] {}
 a[id="test"] {}
 a[id='test'] {}
-a[id=func("foo")] {}
 a[class="(╯°□°）╯︵ ┻━┻"]{}
 input:not([type="radio"]):not([type="checkbox"]) {}
 input:not([type="radio"], [type="checkbox"]) {}
