add description to quote tests

--- a/tests/css_attribute/quotes.css
+++ b/tests/css_attribute/quotes.css
@@ -1,10 +1,17 @@
 a[id=test] {}
 a[id="test"] {}
 a[id='test'] {}
-a[id="'test\""] {}
-a[id='\'test"'] {}
-a[id='\\\'test\\"'] {}
-a[id="\\'test\\\""] {}
+a[id="test'"] {}
+[id="double-quote-in-double-quote\""] {}
+[id='double"quote-in-single-quote"'] {}
+[id="single-quote-in-double-quote'"] {}
+[id='single-quote-in-single-quote\''] {}
+[id="slash-and-double-quote-in-double-quote\\\""] {}
+[id='slash-and-double"quote-in-single-quote\\"'] {}
+[id="slash-and-single-quote-in-double-quote\\'"] {}
+[id='slash-and-single-quote-in-single-quote\\\''] {}
+[id="'should-keep-matched-quotes'"] {}
+[id="\"should-keep-unmatched-quotes'"] {}
 a[class="(╯°□°）╯︵ ┻━┻"]{}
 input:not([type="radio"]):not([type="checkbox"]) {}
 input:not([type="radio"], [type="checkbox"]) {}
