--- a/tests/css_attribute/quotes.css
+++ b/tests/css_attribute/quotes.css
@@ -3,7 +3,7 @@ a[id="test"] {}
 a[id='test'] {}
 a[id="test'"] {}
 [id="double-quote-in-double-quote\""] {}
-[id='double"quote-in-single-quote"'] {}
+[id='double-quote-in-single-quote"'] {}
 [id="single-quote-in-double-quote'"] {}
 [id='single-quote-in-single-quote\''] {}
 [id="slash-and-double-quote-in-double-quote\\\""] {}
