--- a/tests/css_less/less.less
+++ b/tests/css_less/less.less
@@ -1669,5 +1669,5 @@ label {
   .margin-bottom-1\/3;
 }
 
-// whitespace between variable and colon
-@foo : bar;
+// whitespace between variable and colon, #2925 #4090
+@FoO : bar;
