only support custom-selector in css

--- a/tests/css_less/less.less
+++ b/tests/css_less/less.less
@@ -1671,3 +1671,6 @@ label {
 
 // whitespace between variable and colon, #2925 #4090
 @FoO : bar;
+
+// should not parse as custom-selector
+@custom-selector     :--icon #id;
