--- a/tests/css_scss/scss.scss
+++ b/tests/css_scss/scss.scss
@@ -1047,3 +1047,6 @@ $my-map: (
 label {
   @include margin-bottom-1\/3;
 }
+
+// should not parse as custom-selector
+@custom-selector     :--icon #id;
