--- a/tests/css_scss/scss.scss
+++ b/tests/css_scss/scss.scss
@@ -1048,5 +1048,5 @@ label {
   @include margin-bottom-1\/3;
 }
 
-// should not parse as custom-selector
+// should parse as custom-selector in scss
 @custom-selector     :--icon #id;
