update a LESS case

--- a/tests/css_case/case.less
+++ b/tests/css_case/case.less
@@ -72,7 +72,7 @@ $KeepScssVar: val;
 
     @KeepDetachedRuleset();
 
-    &:EXTEND(.Keep ALL);
+    &:extend(.Keep ALL);
 
     .Keep;
     .Keep();
