--- a/tests/handlebars-mustache-statement/basics.hbs
+++ b/tests/handlebars-mustache-statement/basics.hbs
@@ -27,16 +27,17 @@
 
 <div
   class="a-first-class
-    {{if this.optionOne "optionOne"}}
-    
-    {{if this.optionTwo "optionTwo"}}
-    
-    {{if this.optionThree "optionThree"}}
-    
-    {{if this.optionFour "optionFour"}}
-    
-    {{if this.optionFive "optionFive"}}
-    
-    {{this.class}}"
-  ...attributes >
+  {{if this.optionOne 'optionOne'}}
+
+   {{if this.optionTwo 'optionTwo'}}
+
+   {{if this.optionThree 'optionThree'}}
+
+   {{if this.optionFour 'optionFour'}}
+
+   {{if this.optionFive 'optionFive'}}
+
+   {{this.class}}"
+  ...attributes
+>
 </div>
