Add `12px` & `12PX` test

--- a/tests/css_case/case.less
+++ b/tests/css_case/case.less
@@ -79,6 +79,8 @@ $KeepScssVar: val;
     .Keep(4PX)!IMPORTANT;
     .Keep() when (@Keep=Keep);
     .Keep() when (@Keep=12PX);
+    .Keep() when (@Keep="12px");
+    .Keep() when (@Keep="12PX");
     .Keep() when (@Keep=Keep12PX);
 }
 
