--- a/tests/css_less/quotes-in-comments.less
+++ b/tests/css_less/quotes-in-comments.less
@@ -1,9 +1,19 @@
 // Animation   
 // '
 .a { color: red }
+
+.aa:hover::after { content: "\""; } // "
     
     
 .b { background:url(http://example.com); }   .b::after { content: "a"; }
 
 // Animation   !
-.d { color:red    }
+.c { color:red    }
+
+.d { color: red /* // */ }  .d::after { content: "'"; }
+
+/*        fff
+   //   */     .d:hover::after {
+     // qw'erty 
+    content: "'''"; }
+   
