fix quoted urls

--- a/tests/css_less/quotes-in-comments.less
+++ b/tests/css_less/quotes-in-comments.less
@@ -7,6 +7,8 @@
     
 .b { background:url(http://example.com); }   .b::after { content: "a"; }
 
+.bb { background:url('http://example.com/(foo)bar'); }   .bb::after { content: "'a"; } // """
+
 // Animation   !
 .c { color:red    }
 
