--- a/tests/css_less/less.less
+++ b/tests/css_less/less.less
@@ -1674,3 +1674,13 @@ label {
 
 // should not parse as custom-selector
 @custom-selector     :--icon #id;
+
+// extend
+.class {
+  &:extend(.some-class .some-other-class .some-very-loooooooooooooong-class all);
+}
+.class {
+  &:extend(
+    .some-class .some-other-class .some-very-loooooooooooooong-class all
+  );
+}
