--- a/tests/css_less/less.less
+++ b/tests/css_less/less.less
@@ -1684,3 +1684,6 @@ label {
     .some-class .some-other-class .some-very-loooooooooooooong-class all
   );
 }
+.class {
+  &:extend(.some-class .some-other-class .some-very-loooooooooooooong-class .some-very-loooooooooooooong-class all);
+}
