--- a/tests/css_less/less.less
+++ b/tests/css_less/less.less
@@ -1675,7 +1675,7 @@ label {
 // should not parse as custom-selector
 @custom-selector     :--icon #id;
 
-// extend
+// extend #7977
 .class {
   &:extend(.some-class .some-other-class .some-very-loooooooooooooong-class all);
 }
