--- a/tests/format/handlebars/single-quote-option/attributes.hbs
+++ b/tests/format/handlebars/single-quote-option/attributes.hbs
@@ -3,6 +3,9 @@
 <div title='My "title"'></div>
 <div title="My other 'title'"></div>
 
+<div title="{{t 'my.title'}}" />
+<div title='{{t "my.title"}}' />
+
 <a href="/{{url}}/{{url}}"></a>
 <a href='/{{url}}/{{url}}'></a>
 
@@ -10,3 +13,5 @@
 <button class="padding width-{{locales.length}} {{if (has locale) 'uk-button-primary'}}"></button>
 <button class='padding width-{{locales.length}} {{if (has locale) "uk-button-primary"}}'></button>
 <button class='padding width-{{locales.length}} {{if (has locale) 'uk-button-primary'}}'></button>
+
+<div class="padding {{if foo (if fooAgain "bar" (if fooAgainAgain "bar" "foo"))}} baz" />
