--- a/tests/format/mjml/mj-style/mj-style.mjml
+++ b/tests/format/mjml/mj-style/mj-style.mjml
@@ -1,5 +1,4 @@
-<html>
-  <body>
+<mjml>
     <mj-style>
 .some-class {
   color: red;
@@ -7,5 +6,4 @@
 padding:10px;
 }
     </mj-style>
-  </body>
-</html>
+  </mjml>
