--- a/website/playground/playground.css
+++ b/website/playground/playground.css
@@ -6,6 +6,13 @@
 html {
   background-color: #fafafa;
   color: #6a6a6a;
+  --color-border: #ddd;
+  @media (prefers-color-scheme: dark) {
+    background-color: #1b1b1d;
+    color: #e3e3e3;
+    --color-border: #606770;
+    color-scheme: dark;
+  }
   font-family:
     -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial,
@@ -110,7 +117,7 @@ header h1 {
   display: flex;
   flex: 1 1 100%;
   position: relative;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid var(--color-border);
 }
 
 .disabled-output-panel {
@@ -140,7 +147,7 @@ header h1 {
 
   .editor {
     flex-basis: 50%;
-    border-left: 1px solid #ddd;
+    border-left: 1px solid var(--color-border);
     margin-left: -1px;
   }
 }
@@ -165,6 +172,83 @@ header h1 {
   bottom: 0;
   line-height: 1.6;
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+
+  @media (prefers-color-scheme: dark) {
+    /* Credit: Chris Kempson, Gerard Braad */
+    background: #000000;
+    color: #eaeaea;
+    div.CodeMirror-selected {
+      background: #424242;
+    }
+    .CodeMirror-gutters {
+      background: #000000;
+      border-right: 0px;
+    }
+    .CodeMirror-guttermarker {
+      color: #e78c45;
+    }
+    .CodeMirror-guttermarker-subtle {
+      color: #777;
+    }
+    .CodeMirror-linenumber {
+      color: #424242;
+    }
+    .CodeMirror-cursor {
+      border-left: 1px solid #6a6a6a;
+    }
+
+    span.cm-comment {
+      color: #d27b53;
+    }
+    span.cm-atom {
+      color: #a16a94;
+    }
+    span.cm-number {
+      color: #a16a94;
+    }
+
+    span.cm-property,
+    span.cm-attribute {
+      color: #99cc99;
+    }
+    span.cm-keyword {
+      color: #d54e53;
+    }
+    span.cm-string {
+      color: #e7c547;
+    }
+
+    span.cm-variable {
+      color: #b9ca4a;
+    }
+    span.cm-variable-2 {
+      color: #7aa6da;
+    }
+    span.cm-def {
+      color: #e78c45;
+    }
+    span.cm-bracket {
+      color: #eaeaea;
+    }
+    span.cm-tag {
+      color: #d54e53;
+    }
+    span.cm-link {
+      color: #a16a94;
+    }
+    span.cm-error {
+      background: #d54e53;
+      color: #6a6a6a;
+    }
+
+    .CodeMirror-activeline-background {
+      background: #2a2a2a;
+    }
+    .CodeMirror-matchingbracket {
+      text-decoration: underline;
+      color: white !important;
+    }
+  }
 }
 
 .bottom-bar {
@@ -203,8 +287,8 @@ header h1 {
   box-sizing: border-box;
   width: 225px;
   overflow-y: auto;
-  border-bottom: 1px solid #ddd;
-  border-right: 1px solid #ddd;
+  border-bottom: 1px solid var(--color-border);
+  border-right: 1px solid var(--color-border);
   flex: 0 1 auto;
 }
 
@@ -222,7 +306,7 @@ header h1 {
 .sub-options {
   flex: 1;
   padding: 15px 0 10px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid var(--color-border);
 }
 
 .sub-options:last-child {
@@ -264,39 +348,50 @@ input[type="number"] {
   display: inline-block;
   height: 18px;
   padding: 0 5px;
-  border: 1px solid #d1d2d3;
   border-radius: 0.25em;
   background-image: linear-gradient(to bottom, #fafbfc, #e4ebf0);
+  color: #24292e;
+  border: 1px solid var(--color-border);
+  @media (prefers-color-scheme: dark) {
+    background-image: linear-gradient(to bottom, #090a11, #000);
+    color: #ffffff;
+  }
   font-size: 11px;
   line-height: 18px;
   font-weight: 600;
   font-family: inherit;
-  color: #24292e;
   text-decoration: none;
   cursor: pointer;
-  outline: none;
   position: relative;
 }
 
-.btn:focus {
-  border-color: #c8e1ff;
+.btn:enabled:is(:hover, :active) {
+  border-color: #afb1b2;
+  @media (prefers-color-scheme: dark) {
+    border-color: #6f7b81;
+  }
 }
 
-.btn:hover:enabled {
+.btn:enabled:hover {
   background-color: #e6ebf1;
   background-image: linear-gradient(to bottom, #f0f3f6, #dce3ec);
-  border-color: #afb1b2;
+  @media (prefers-color-scheme: dark) {
+    background-color: #2c3a44;
+    background-image: linear-gradient(to bottom, #1a2b34, #090a11);
+  }
 }
 
-.btn:active {
+.btn:enabled:active {
   background-color: #e9ecef;
   background-image: none;
-  border-color: #afb1b2;
+  @media (prefers-color-scheme: dark) {
+    background-color: #1a2b34;
+  }
   box-shadow: inset 0 0.15em 0.3em rgba(27, 31, 35, 0.15);
 }
 
 .btn:disabled {
-  color: #afb1b2;
+  opacity: 0.5;
 }
 
 .tooltip {
