--- a/website/playground/playground.css
+++ b/website/playground/playground.css
@@ -352,10 +352,7 @@ input[type="number"] {
   height: 18px;
   padding: 0 5px;
   border-radius: 0.25em;
-  background-image: linear-gradient(to bottom, #fafbfc, #e4ebf0);
-  &:is([data-theme="dark"] *) {
-    background-image: linear-gradient(to bottom, #090a11, #000);
-  }
+  background-image: linear-gradient(to bottom, light-dark(#fafbfc, #090a11), light-dark(#e4ebf0, #000));
   color: light-dark(#24292e, #fff);
   border: 1px solid var(--color-border);
   font-size: 11px;
@@ -373,10 +370,7 @@ input[type="number"] {
 
 .btn:enabled:hover {
   background-color: light-dark(#e6ebf1, #2c3a44);
-  background-image: linear-gradient(to bottom, #f0f3f6, #dce3ec);
-  &:is([data-theme="dark"] *) {
-    background-image: linear-gradient(to bottom, #1a2b34, #090a11);
-  }
+  background-image: linear-gradient(to bottom, light-dark(#f0f3f6, #1a2b34), light-dark(#dce3ec, #090a11));
 }
 
 .btn:enabled:active {
