chore: fix various typos across codebase

--- a/tests/format/css/quotes/quotes.css
+++ b/tests/format/css/quotes/quotes.css
@@ -53,13 +53,13 @@
     content: '\\';
     content: "\\";
 
-    /* Backslases. */
+    /* Backslashes. */
     content: "\"\\\"\\\\\" '\'\\'\\\'\\\\'";
     content: '\'\\\'\\\\\' "\"\\"\\\"\\\\"';
 
     /* Somewhat more real-word example. */
-    content: "He's sayin': \"How's it goin'?\" Don't ask me why.";
-    content: 'He\'s sayin\': "How\'s it goin\'?" Don\'t ask me why.';
+    content: "He's saying': \"How's it going'?\" Don't ask me why.";
+    content: 'He\'s saying\': "How\'s it going\'?" Don\'t ask me why.';
 
     /* Somewhat more real-word example 2. */
     content: "var backslash = \"\\\", doubleQuote = '\"';";
