--- a/tests/format/scss/function/function-in-url.scss
+++ b/tests/format/scss/function/function-in-url.scss
@@ -7,5 +7,5 @@
 }
 
 a {
- backround: url(concat('http://', 'example.com', '/image.png'));
+ background: url(concat('http://', 'example.com', '/image.png'));
 }
