--- a/tests/format/handlebars/attr-node/order.hbs
+++ b/tests/format/handlebars/attr-node/order.hbs
@@ -1,7 +1,7 @@
 <MyComponent
   {{! this is a comment for arg 1}}
   @arg1="hello"
-  {{on "clik" this.modify}}
+  {{on "click" this.modify}}
   @arg2="hello"
   {{! this is a comment for arg 3}}
   @arg3="hello"
