--- a/tests/format/handlebars/concat-statement/in-attr-node.hbs
+++ b/tests/format/handlebars/concat-statement/in-attr-node.hbs
@@ -1,4 +1,4 @@
-<div class="a very long list of classes that exceeds {{eighty}} chars with emtpy spaces">hey</div>
+<div class="a very long list of classes that exceeds {{eighty}} chars with empty spaces">hey</div>
 <a href="a-very-long-href-from-a-third-party-marketing-platform{{id}}longer-than-eighty-chars">Link</a>
 <button
   class="uk-padding-remove uk-button uk-button-default uk-button-small uk-width-1-{{intl.locales.length}} {{if (contains locale intl.locale) "uk-button-primary"}}"
