--- a/tests/format/scss/trailing-comma/trailing-comma.scss
+++ b/tests/format/scss/trailing-comma/trailing-comma.scss
@@ -1,4 +1,4 @@
 $z-indexes: (
     header: 1035,
-    overlay: 1202 // The comma shoud be printed before the comment when trailing-comma = es5
+    overlay: 1202 // The comma should be printed before the comment when trailing-comma = es5
 );
