--- a/tests/format/handlebars/block-statement/custome-if-else.hbs
+++ b/tests/format/handlebars/block-statement/custome-if-else.hbs
@@ -1,5 +1,27 @@
-{{#animated-if this.foo}}
-foo content
-{{else if (this.bar)}}
-bar content
+{{#animated-if a}}
+a
+{{else if (b)}}
+b
+{{/animated-if}}
+
+{{#animated-if a}}
+a
+{{else if (b)}}
+b
+{{else if (c)}}
+c
+{{/animated-if}}
+
+{{#animated-if a}}
+a
+{{else}}
+else
+{{/animated-if}}
+
+{{#animated-if a}}
+a
+{{else if (b)}}
+b
+{{else}}
+else
 {{/animated-if}}
