--- a/tests/format/css/attribute/quotes.css
+++ b/tests/format/css/attribute/quotes.css
@@ -3,6 +3,7 @@ a[id="test"] {}
 a[id='test'] {}
 a[id=func("foo")] {}
 a[class="(╯°□°）╯︵ ┻━┻"]{}
+a[href="//"] {}
 input:not([type="radio"]):not([type="checkbox"]) {}
 input:not([type="radio"], [type="checkbox"]) {}
 section:has(:not([type="radio"], [type="checkbox"])) {}
