--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -45,6 +45,8 @@
   --ifm-color-primary-light: #68bbbc;
   --ifm-color-primary-lighter: #72bfc0;
   --ifm-color-primary-lightest: #8dcccd;
+
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
   --docsearch-searchbox-background: #000000a6 !important;
 }
 
