--- a/tests/format/handlebars/style-tag/html-whitespace-sensitivity-ignore/test.hbs
+++ b/tests/format/handlebars/style-tag/html-whitespace-sensitivity-ignore/test.hbs
@@ -1,15 +1,8 @@
 <style>
-  .a {color: red;
-  }
-</style>
-
-<style>
-.b { color:     blue;}
-</style>
-
-<style>
   .a {
-    color: red;
   }
-            .b { color:     blue};
 </style>
+
+<span><style>
+.b {}
+</style></span>
