--- a/tests/format/less/lookup/lookup-1.less
+++ b/tests/format/less/lookup/lookup-1.less
@@ -5,6 +5,7 @@
   option2: false;
 }
 
+// TODO: `@config   [   option1] = true` is treated as `selector-combinator` not `value-comma_group`
 .mixin() when (@config   [   option1] = true) {
   selected: value;
 }
