--- a/tests/format/less/lookup/lookup-1.less
+++ b/tests/format/less/lookup/lookup-1.less
@@ -5,7 +5,10 @@
   option2: false;
 }
 
-// TODO: `@config   [   option1] = true` is treated as `selector-combinator` not `value-comma_group`
+/*
+TODO[prettier]:
+The `@config   [   option1]` part should format as `@config[option1]`
+**/
 .mixin() when (@config   [   option1] = true) {
   selected: value;
 }
