--- a/tests/format/less/lookup/lookup-2.less
+++ b/tests/format/less/lookup/lookup-2.less
@@ -13,4 +13,5 @@
   @lookup: dark;
   color: @config[@@lookup][primary];
   color: @config   [   @@lookup   ][   primary   ];
+  color: @config   [   @@lookup   ]   [   primary   ];
 }
