--- a/tests/format/handlebars/front-matter/embedded-language-formatting-off/format-embed-off.hbs
+++ b/tests/format/handlebars/front-matter/embedded-language-formatting-off/format-embed-off.hbs
@@ -1,12 +1,15 @@
 ---
-title: A very interesting subject
+title:         A very interesting subject
 keywords:
 - some
-- keywords
+-      keywords
 - for testing
+data: {x:1,
+ y:100000000}
 ---
-
 <h1>{{title}}</h1>
 <p>
-  Keywords: {{#each keywords}}{{this}}{{#unless @last}}, {{/unless}}{{/each}}
+  Keywords: {{#each keywords}}
+  {{this}}{{#unless @last}}, {{/unless}}
+  {{/each}}
 </p>
