--- a/tests/format/css/font/font.css
+++ b/tests/format/css/font/font.css
@@ -1,40 +1,22 @@
-foo {
+.font {
+  /* Should not insert space */
   font: 1rem/1;
-  font: 1rem / 1;
-
+  --custom-font: 1rem/1;
   font: var(--size)/2;
-  font: var(--size) / 2;
-  font: var(--size)    /2;
-  font: var(--size)/    2;
-  font: var(--size)    /    2;
-
-  font: calc(var(--size) / 2)/2;
-  font: calc(var(--size) / 2) / 2;
-  font: calc(var(--size) / 2)    /2;
-  font: calc(var(--size) / 2)/    2;
-  font: calc(var(--size) / 2)    /    2;
-
+  --custom-font: var(--size)/2;
+  font: calc(var(--size)/2)/2;
   font: min(1px, 2px)/2;
-  font: min(1px, 2px) / 2;
-  font: min(1px, 2px)    /2;
-  font: min(1px, 2px)/    2;
-  font: min(1px, 2px)    /    2;
-
   font: max(1px, 2px)/2;
-  font: max(1px, 2px) / 2;
-  font: max(1px, 2px)    /2;
-  font: max(1px, 2px)/    2;
-  font: max(1px, 2px)    /    2;
-
   font: clamp(1px, 2px, 3px)/2;
-  font: clamp(1px, 2px, 3px) / 2;
-  font: clamp(1px, 2px, 3px)    /2;
-  font: clamp(1px, 2px, 3px)/    2;
-  font: clamp(1px, 2px, 3px)    /    2;
 
-  font: --custom(1px)/2;
-  font: --custom(1px) / 2;
-  font: --custom(1px)    /2;
-  font: --custom(1px)/    2;
-  font: --custom(1px)    /    2;
+  /* Should preserve one space */
+  font: 1rem   /   1;
+  --font: 1rem   /   1;
+  font: --custom(1px)   /   2;
+  --font: --custom(1px)   /   2;
+  font: calc(var(--size)   /   2)   /   2;
+  font: min(1px, 2px)   /   2;
+  font: max(1px, 2px)   /   2;
+  font: clamp(1px, 2px, 3px)   /   2;
+  font: --custom(1px)   /   2;
 }
