--- a/tests/format/css/font/font.css
+++ b/tests/format/css/font/font.css
@@ -1,5 +1,5 @@
 .font {
-  /* Should not insert space */
+  /* No space */
   font: 1rem/1;
   --custom-font: 1rem/1;
   font: var(--size)/2;
@@ -9,7 +9,7 @@
   font: max(1px, 2px)/2;
   font: clamp(1px, 2px, 3px)/2;
 
-  /* Should preserve one space */
+  /* Space around */
   font: 1rem   /   1;
   --font: 1rem   /   1;
   font: --custom(1px)   /   2;
@@ -19,4 +19,16 @@
   font: max(1px, 2px)   /   2;
   font: clamp(1px, 2px, 3px)   /   2;
   font: --custom(1px)   /   2;
+
+  /* Space before */
+  font: 1rem   /1;
+  --font: 1rem   /1;
+  font: --custom(1px)   /2; /* Bug*/
+  --font: --custom(1px)   /2; /* Bug*/
+
+  /* Space after */
+  font: 1rem/   1; /* Bug*/
+  --font: 1rem/   1; /* Bug*/
+  font: --custom(1px)/   2; /* Bug*/
+  --font: --custom(1px)/   2; /* Bug*/
 }
