--- a/tests/format/handlebars/style-tag/html-whitespace-sensitivity-ignore/test.hbs
+++ b/tests/format/handlebars/style-tag/html-whitespace-sensitivity-ignore/test.hbs
@@ -1,8 +1,9 @@
 <style>
-  .a {
-  }
+    .a {color:    red}
+        .b {color:    red}
 </style>
 
 <span><style>
-.b {}
+    .a {color:    red}
+        .b {color:    red}
 </style></span>
