--- a/tests/format/handlebars/style-tag/html-whitespace-sensitivity-ignore/test.hbs
+++ b/tests/format/handlebars/style-tag/html-whitespace-sensitivity-ignore/test.hbs
@@ -7,3 +7,13 @@
     .a {color:    red}
         .b {color:    red}
 </style></span>
+
+<style>
+    invalid{
+      invalid{
+</style>
+
+<span><style>
+    invalid{
+      invalid{
+</style></span>
