--- a/tests/format/handlebars/style-tag/html-whitespace-sensitivity-ignore/test.hbs
+++ b/tests/format/handlebars/style-tag/html-whitespace-sensitivity-ignore/test.hbs
@@ -1,3 +1,4 @@
+<div>
 <style>
     .a {color:    red}
         .b {color:    red}
@@ -7,3 +8,4 @@
     .a {color:    red}
         .b {color:    red}
 </style></span>
+</div>
