--- a/tests/format/angular/angular/attributes.component.html
+++ b/tests/format/angular/angular/attributes.component.html
@@ -39,6 +39,13 @@
     [target]=" a ?. b ( ) "
     [target]=" a ?. b "
     [target]=" this . a "
+    [target]=" 'string literal' "
+    [target]=" `template literal` "
+    [target]=" `template
+literal` "
+    [target]=" tag `template literal` "
+    [target]=" tag `template
+literal` "
     on-target=" a = 1 "
     (target)=" a = 1 "
     (target)=" a . b = 1 "
@@ -78,6 +85,13 @@
     *directive=" a ; b : c "
     *directive=" a ; b : c as d "
     *directive=" a ; b as c "
+    *directive=" 'string literal' "
+    *directive=" `template literal` "
+    *directive=" `template
+literal` "
+    *directive=" tag `template literal` "
+    *directive=" tag `template
+literal` "
     *ngIf="listRow.NextScheduledSendStatus == 1 || listRow.NextScheduledSendStatus == 2 || listRow.NextScheduledSendStatus == 3"
     *ngIf="listRow.NextScheduledSendStatus == 1 || listRow.NextScheduledSendStatus == 2 || listRow.NextScheduledSendStatus == 3; else hello"
     (target)="listRow.NextScheduledSendStatus == 1 || listRow.NextScheduledSendStatus == 2 || listRow.NextScheduledSendStatus == 3"
